examples/datalog/18_advanced_patterns/106_matrix_multiply.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_matrix_mult
Knowledge graph 'test_matrix_mult' created.
Switched to knowledge graph: test_matrix_mult
> .kg use test_matrix_mult
Switched to knowledge graph: test_matrix_mult
> +a[(1, 1, 1), (1, 2, 2), (2, 1, 3), (2, 2, 4)].
Inserted 4 fact(s) into 'a'.
> +b[(1, 1, 5), (1, 2, 6), (2, 1, 7), (2, 2, 8)].
Inserted 4 fact(s) into 'b'.
> elem_prod(I, J, K, P) :- a(I, K, AVal), b(K, J, BVal), P = AVal * BVal.
Script error: Query execution failed: Unsafe rule: Atom { relation: "elem_prod", args: [Variable("I"), Variable("J"), Variable("K"), Variable("P")] }. Variables ["P"] in head do not appear in positive body atoms.
